# simple-chat-roku

./: Cargo.toml  READ.md  rount_2_test.rs
.github/workflows/: ci.yml
chat-client/: Cargo.toml
chat-client-lib/: Cargo.toml
chat-client-lib/src/: lib.rs
chat-client/src/: main.rs
chat-common/: Cargo.toml
chat-common/src/: lib.rs
chat-server/: Cargo.toml
chat-server-lib/: Cargo.toml
chat-server-lib/src/: lib.rs
chat-server/src/: main.rs
chat-server/tests/: integration.rs
