[package]
name = "chat-server-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chat-common = { path = "../chat-common" }
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"